@@ -101,6 +101,7 @@ Bugs fixed
 - Bug 2665 - Ipv4RawSocket can not send packets to broadcast or multicast
 - Bug 2671 - ArpCache::Entry::SetMacAddress is misspelled
 - Bug 2717 - Fix mask generation for Ipv4RoutingTableEntry::CreateDefaultRoute
+- Bug 2722 - 802.11g sends DSSS spectrum signals using CreateOfdmTxPowerSpectralDensity
 
 Known issues
 ------------
